--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
 					<div id="intro">
 						<h1>송유빈<br />
 						홈페이지</h1>
-						<p>A free, fully responsive HTML5 + CSS3 site template designed by <a href="https://twitter.com/ajlkn">@ajlkn</a> for <a href="https://html5up.net">HTML5 UP</a><br />
-						and released for free under the <a href="https://html5up.net/license">Creative Commons license</a>.</p>
+						<p>도비의 억장 와르르맨션 홈페이지 만들기 대장정.</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
