--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<div id="intro">
 						<h1>송유빈<br />
 						홈페이지</h1>
-						<p>도비의 억장 와르르맨션 홈페이지 만들기 대장정.</p>
+						<p>도비의 홈페이지 만들기 대장정</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -54,8 +54,8 @@
 							<article class="post featured">
 								<header class="major">
 									<span class="date">April 25, 2017</span>
-									<h2><a href="#">And this is a<br />
-									massive headline</a></h2>
+									<h2><a href="#">　　　╲　　　　　　　　╱<br />
+										　　╲　　 설마…　　　╱</a></h2>
 									<p>Aenean ornare velit lacus varius enim ullamcorper proin aliquam<br />
 									facilisis ante sed etiam magna interdum congue. Lorem ipsum dolor<br />
 									amet nullam sed etiam veroeros.</p>
