--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
 							<article class="post featured">
 								<header class="major">
 									<span class="date">April 25, 2017</span>
-									<h2><a href="#">　　　╲　　　　　　　　╱<br />
-										　　╲　　 설마…　　　╱</a></h2>
-									<p>Aenean ornare velit lacus varius enim ullamcorper proin aliquam<br />
-									facilisis ante sed etiam magna interdum congue. Lorem ipsum dolor<br />
-									amet nullam sed etiam veroeros.</p>
+									<h2><a href="#">세상에<br />
+										제 홈페이지가 보이시나요</a></h2>
+									<p>주중에는 도비<br />
+									주말에는 야간직 병원약사로 살아가고 있는 송맹수입니다<br />
+									어서오세요 웰컴 컴 인싸이드</p>
 								</header>
 								<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
 								<ul class="actions special">
