--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Massively by HTML5 UP</title>
+		<title>자기 PR의 시대를 맞이하야 만들게 된 홈페이지</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -29,14 +29,14 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">Massively</a>
+						<a href="index.html" class="logo">bott_pharm_toon</a>
 					</header>
 
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li class="active"><a href="index.html">This is Massively</a></li>
-							<li><a href="generic.html">Generic Page</a></li>
+							<li class="active"><a href="index.html">INTRODUCTION</a></li>
+							<li><a href="generic.html">RELEASED PAPERS</a></li>
 							<li><a href="elements.html">Elements Reference</a></li>
 						</ul>
 						<ul class="icons">
@@ -58,7 +58,7 @@
 										제 홈페이지가 보이시나요</a></h2>
 									<p>주중에는 도비<br />
 									주말에는 야간직 병원약사로 살아가고 있는 송맹수입니다<br />
-									어서오세요 웰컴 컴 인싸이드</p>
+									어서오세요 웰컴</p>
 								</header>
 								<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
 								<ul class="actions special">
