--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
 					<nav id="nav">
 						<ul class="links">
 							<li class="active"><a href="index.html">INTRODUCTION</a></li>
-							<li><a href="generic.html">RELEASED PAPERS</a></li>
+							<li><a href="generic.html">RELEASED P</a></li>
 							<li><a href="elements.html">Elements Reference</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+							<li><a href="https://www.instagram.com/bott_pharm_toon" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 							<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
 					</nav>
@@ -60,9 +60,9 @@
 									주말에는 야간직 병원약사로 살아가고 있는 송맹수입니다<br />
 									어서오세요 웰컴</p>
 								</header>
-								<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
+								<a href="#" class="image main"><img src="KakaoTalk_20210913_150409721.png" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="#" class="button large">Full Story</a></li>
+									<li><a href="https://www.instagram.com/bott_pharm_toon" class="button large">instagram</a></li>
 								</ul>
 							</article>
 
