--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 									주말에는 야간직 병원약사로 살아가고 있는 송맹수입니다<br />
 									어서오세요 웰컴</p>
 								</header>
-								<a href="#" class="image main"><img src="KakaoTalk_20210913_150409721.png" alt="" /></a>
+								<a href="#" class="image main"><img src="https://mblogthumb-phinf.pstatic.net/MjAyMDAzMDZfMjgy/MDAxNTgzNDU4NDg2MTg5.MYMT_iBqY2tPADy7Fkck2KbG2Xzyj38a6-9eN13pykwg.sNuupBEucZi9B_ZJNte5VKLIXMQMfHo3Xq35oS9OOksg.PNG.the_ewha/SE-48c18df1-e706-4095-833d-79a38e41166f.png" alt="" /></a>
 								<ul class="actions special">
 									<li><a href="https://www.instagram.com/bott_pharm_toon" class="button large">instagram</a></li>
 								</ul>
