--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<span class="date">April 25, 2017</span>
+									<a href="#" class="image main"><img src="HOMEPAGE MAIN.png" alt="" /></a>
 									<h2><a href="#">세상에<br />
 										제 홈페이지가 보이시나요</a></h2>
 									<p>주중에는 도비<br />
