--- a/index.html
+++ b/index.html
@@ -54,21 +54,21 @@
 							<!-- Section -->
 								<section>
 									<header class="major">
-										<h2>Erat lacinia</h2>
+										<h2>제가 가진 작고 소중한 재능</h2>
 									</header>
 									<div class="features">
 										<article>
 											<span class="icon fa-gem"></span>
 											<div class="content">
-												<h3>Portitor ullamcorper</h3>
-												<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+												<h3>약사</h3>
+												<p>약학을 전공했으니 당연한 수순으로 약사가 되었습니다. 지금도 일반대학원에서 약 관련 연구를 하고 있답니다. 빨리 졸업 하고 싶습니다. </p>
 											</div>
 										</article>
 										<article>
 											<span class="icon solid fa-paper-plane"></span>
 											<div class="content">
-												<h3>Sapien veroeros</h3>
-												<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+												<h3>소소한 그림실력</h3>
+												<p>약학과 입학 후 4학년 때부터 만화를 그리기 시작했습니다. 우리 학교 학생들께서 많이 좋아해주신 덕에 나름 큰 인스타그램 계정으로 성장할 수 있었습니다. 덕분에 인터뷰도 해보고 인싸 체험도 해보았습니다. </p>
 											</div>
 										</article>
 										<article>
