--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
 									<div class="content">
 										<header>
 											<h1>세상에<br />
-											제 홈페이지가 보이시나요</h1>
+											제 홈페이지가<br> 
+											보이시나요</h1>
 											<p>주중에는 도비, 주말에는 야간직 약사</p>
 										</header>
 										<p>이화여자대학교 약학과 졸업, 그런데 이제 석사를 곁들인...<br>
