--- a/index.html
+++ b/index.html
@@ -198,11 +198,11 @@
 							<!-- Section -->
 								<section>
 									<header class="major">
-										<h2>Ante interdum</h2>
+										<h2>미디어에 비친 송맹수</h2>
 									</header>
 									<div class="mini-posts">
 										<article>
-											<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
+											<a href="http://inews.ewha.ac.kr/news/articleView.html?idxno=32829" class="image"><img src="https://cdn.inews.ewha.ac.kr/news/photo/202105/32829_10514_557.jpg" alt="" /></a>
 											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore aliquam.</p>
 										</article>
 										<article>
@@ -222,9 +222,9 @@
 							<!-- Section -->
 								<section>
 									<header class="major">
-										<h2>Get in touch</h2>
+										<h2>저를 영접할 수 있는 방법</h2>
 									</header>
-									<p>Sed varius enim lorem ullamcorper dolore aliquam aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin sed aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+									<p>앗! 바쁘다 바빠 현대사회! 하지만 이런 바쁜 와중에도 저에게 연락을 취하고 싶다면?</p>
 									<ul class="contact">
 										<li class="icon solid fa-envelope"><a href="#">information@untitled.tld</a></li>
 										<li class="icon solid fa-phone">(000) 000-0000</li>
