--- a/index.html
+++ b/index.html
@@ -203,10 +203,11 @@
 									<div class="mini-posts">
 										<article>
 											<a href="http://inews.ewha.ac.kr/news/articleView.html?idxno=32829" class="image"><img src="https://cdn.inews.ewha.ac.kr/news/photo/202105/32829_10514_557.jpg" alt="" /></a>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore aliquam.</p>
+											<p>이대학보에서 인터뷰를 했습니다. <br>
+											그림을 클릭하시면 이대학보 홈페이지로 이동합니다.</p>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic08.jpg" alt="" /></a>
+											<a href="https://blog.naver.com/the_ewha/221840089414" class="image"><img src="https://postfiles.pstatic.net/MjAyMDAzMDZfMjgy/MDAxNTgzNDU4NDg2MTg5.MYMT_iBqY2tPADy7Fkck2KbG2Xzyj38a6-9eN13pykwg.sNuupBEucZi9B_ZJNte5VKLIXMQMfHo3Xq35oS9OOksg.PNG.the_ewha/SE-48c18df1-e706-4095-833d-79a38e41166f.png?type=w966" alt="" /></a>
 											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore aliquam.</p>
 										</article>
 										<article>
