--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 											그림을 클릭하시면 이대학보 홈페이지로 이동합니다.</p>
 										</article>
 										<article>
-											<a href="https://blog.naver.com/the_ewha/221840089414" class="image"><img src="https://postfiles.pstatic.net/MjAyMDAzMDZfMjgy/MDAxNTgzNDU4NDg2MTg5.MYMT_iBqY2tPADy7Fkck2KbG2Xzyj38a6-9eN13pykwg.sNuupBEucZi9B_ZJNte5VKLIXMQMfHo3Xq35oS9OOksg.PNG.the_ewha/SE-48c18df1-e706-4095-833d-79a38e41166f.png?type=w966" alt="" /></a>
+											<a href="https://blog.naver.com/the_ewha/221840089414" class="image"><img src="https://postfiles.pstatic.net/MjAyMDAzMDZfMjgy/MDAxNTgzNDU4NDg2MTg5.MYMT_iBqY2tPADy7Fkck2KbG2Xzyj38a6-9eN13pykwg.sNuupBEucZi9B_ZJNte5VKLIXMQMfHo3Xq35oS9OOksg.PNG.the_ewha/SE-48c18df1-e706-4095-833d-79a38e41166f.PNG" alt="" /></a>
 											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore aliquam.</p>
 										</article>
 										<article>
