--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 										</ul>
 									</div>
 									<span class="image object">
-										<img src="images/pic10.jpg" alt="" />
+										<img src="images/KakaoTalk_20210913_150409721.jpg" alt="" />
 									</span>
 								</section>
 
@@ -68,22 +68,22 @@
 										<article>
 											<span class="icon solid fa-paper-plane"></span>
 											<div class="content">
-												<h3>소소한 그림실력</h3>
+												<h3>소소한 그림 실력</h3>
 												<p>약학과 입학 후 4학년 때부터 만화를 그리기 시작했습니다. 우리 학교 학생들께서 많이 좋아해주신 덕에 나름 큰 인스타그램 계정으로 성장할 수 있었습니다. 덕분에 인터뷰도 해보고 인싸 체험도 해보았습니다. </p>
 											</div>
 										</article>
 										<article>
 											<span class="icon solid fa-rocket"></span>
 											<div class="content">
-												<h3>Quam lorem ipsum</h3>
-												<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+												<h3>감성적인 사진 찍기</h3>
+												<p>이래봬도 감성적인 사진을 조금 찍을 줄 안답니다.</p>
 											</div>
 										</article>
 										<article>
 											<span class="icon solid fa-signal"></span>
 											<div class="content">
-												<h3>Sed magna finibus</h3>
-												<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+												<h3>악기 연주</h3>
+												<p>음악에 한이 맺힌 건지 중, 고등학교 시절 포함 지금까지 음악 동아리에서만 활동했습니다. 롹앤롤.</p>
 											</div>
 										</article>
 									</div>
