--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 										</ul>
 									</div>
 									<span class="image object">
-										<img src="images/KakaoTalk_20210913_150409721.PNG" alt="" />
+										<img src="images/KakaoTalk_20210913_150409721.png" alt="" />
 									</span>
 								</section>
 
