--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 											<span class="icon solid fa-signal"></span>
 											<div class="content">
 												<h3>악기 연주</h3>
-												<p>음악에 한이 맺힌 건지 중, 고등학교 시절 포함 지금까지 음악 동아리에서만 활동했습니다. 롹앤롤.</p>
+												<p>음악에 한이 맺힌 건지 중, 고등학교 시절 포함 지금까지 음악 동아리에서만 활동했습니다. 바이올린과 기타를 연주할 수 있습니다. 롹앤롤.</p>
 											</div>
 										</article>
 									</div>
