--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 					</header>
 					<div class="posts">
 						<article>
-							<a href="#" class="image"><img src="images/IMG_1317.HEIC" alt="" /></a>
+							<a href="#" class="image"><img src="images/IMG_1317.heic" alt="" /></a>
 							<h3>Interdum aenean</h3>
 							<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
 							<ul class="actions">
@@ -120,7 +120,7 @@
 							</ul>
 						</article>
 						<article>
-							<a href="#" class="image"><img src="images/IMG_4804.HEIC" alt="" /></a>
+							<a href="#" class="image"><img src="images/IMG_4804.heic" alt="" /></a>
 							<h3>Nulla amet dolore</h3>
 							<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
 							<ul class="actions">
@@ -144,7 +144,7 @@
 							</ul>
 						</article>
 						<article>
-							<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
+							<a href="#" class="image"><img src="images/IMG_0707.heic" alt="" /></a>
 							<h3>Feugiat lorem aenean</h3>
 							<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
 							<ul class="actions">
