--- a/index.html
+++ b/index.html
@@ -225,8 +225,8 @@
 							</p>
 						</article>
 						<article>
-							<a href="https://blog.naver.com/the_ewha/221840089414" class="image"><img src="https://postfiles.pstatic.net/MjAyMDAzMDZfMjgy/MDAxNTgzNDU4NDg2MTg5.MYMT_iBqY2tPADy7Fkck2KbG2Xzyj38a6-9eN13pykwg.sNuupBEucZi9B_ZJNte5VKLIXMQMfHo3Xq35oS9OOksg.PNG.the_ewha/SE-48c18df1-e706-4095-833d-79a38e41166f.PNG" alt="" /></a>
-							<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore aliquam.</p>
+							<a href="https://blog.naver.com/the_ewha/221840089414" class="image"><img src="SE-48c18df1-e706-4095-833d-79a38e41166f.png" alt="" /></a>
+							<p>이화여대 블로그에서도 인터뷰를 했답니다.</p>
 						</article>
 						<article>
 							<a href="#" class="image"><img src="images/pic09.jpg" alt="" /></a>
